source width and styles  testing

--- a/src/styles/global/layout.scss
+++ b/src/styles/global/layout.scss
@@ -3,7 +3,7 @@
 // Layout
 // ----------------------------------------------------------
 
-@import "src/styles/scaffold";
+@import 'src/styles/scaffold';
 
 body {
   --fs-body-bkg: var(--fs-color-body-bkg);
@@ -24,7 +24,7 @@ main,
   padding-bottom: var(--fs-spacing-4);
   margin-top: var(--fs-spacing-4);
 
-  @include media(">=notebook") {
+  @include media('>=notebook') {
     padding-bottom: var(--fs-grid-padding);
     margin-top: var(--fs-grid-padding);
   }
@@ -35,7 +35,7 @@ main,
   padding-top: var(--fs-spacing-4);
   padding-bottom: var(--fs-spacing-4);
 
-  @include media(">=notebook") {
+  @include media('>=notebook') {
     padding-top: var(--fs-grid-padding);
     padding-bottom: var(--fs-grid-padding);
   }
@@ -58,7 +58,7 @@ main,
 
 // Helper class
 .display-mobile {
-  @include media(">=notebook") {
+  @include media('>=notebook') {
     display: none;
     visibility: hidden;
   }
@@ -66,7 +66,7 @@ main,
 
 // Helper class
 .hidden-mobile {
-  @include media("<notebook") {
+  @include media('<notebook') {
     display: none;
     visibility: hidden;
   }
